--- a/package.json
+++ b/package.json
@@ -8,9 +8,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "lodash": "^4.17.21",
-    "wordlist-english": "^1.2.1"
-  }
+  "license": "MIT"
 }
